# stellar-Will

./: .gitignore  Cargo.toml  Makefile  README.md  deployment_output.txt  stellar.yaml
.github/workflows/: ci.yml
contracts/trigger/: Cargo.toml
contracts/trigger/src/: lib.rs
contracts/vault/: Cargo.toml
contracts/vault-factory/: Cargo.toml
contracts/vault-factory/src/: lib.rs  test.rs
contracts/vault/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: BeneficiaryForm.tsx  CountdownTimer.tsx  LiveFeed.tsx  Navbar.tsx  Sidebar.tsx  VaultCard.tsx
frontend/src/hooks/: useCountdown.ts  useVaultEvents.ts  useWallet.ts  useWallet.tsx
frontend/src/lib/: contracts.ts  stellar.ts
frontend/src/pages/: BeneficiaryView.tsx  CreateVault.tsx  Dashboard.tsx  PublicTriggers.tsx  VaultDetail.tsx
frontend/src/tests/: vault.test.tsx
frontend/src/types/: vault.ts
keeper/: index.js  package-lock.json  package.json
