[package]
name = "stellar-will-vault-factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.5.0"
stellar-will-vault = { path = "../vault" }

[dev-dependencies]
soroban-sdk = { version = "21.5.0", features = ["testutils"] }
stellar-will-trigger = { path = "../trigger" }
